fix: modal window fields overflow

--- a/src/assets/scss/_modal.scss
+++ b/src/assets/scss/_modal.scss
@@ -88,6 +88,7 @@
     border-radius: 5px;
     padding: 5px 10px;
     margin: 8px 0;
+    width: 454px;
 }
 
 .confirm-button {
